# CT

./: .gitmodules  CMakeLists.txt  CT.sln  README.md
Ampel/: Ampel.vcxproj  Ampel.vcxproj.filters  Application.h  Button.h  CMakeLists.txt  ClassDiagram.cd  Compile.ipp  Includes.h  Light.h  LightBody.h  LightBox.h  Line.h  LinePlotter.h  LinkDB.h  Node.h  Road.h  RoadLights.h  RoadsDB.h  Selected.h  Sequence.h  SequenceDB.h  SequenceGenerator.h  Setup.ipp  SetupState.h  Simulation.ipp  TrafficConnector.h  TrafficLight.h  TrafficNodeDB.h  VehicleLight.h  Window.h  main.cpp
Ampel/include/: Application.h  Compile.h  Includes.h  Light.h  LightBox.h  LightDraw.h  Line.h  LinePlotter.h  LinkDB.h  Links.h  Node.h  NodeDB.h  Nodes.h  RoadLights.h  RoadsDB.h  Selected.h  Sequence.h  SequenceDB.h  Setup.h  Setup.ipp  Simulation.h  Simulation.ipp  TrafficConnector.h  TrafficLight.h  TrafficLights.h  TrafficNodeDB.h  Window.h
Ampel/src/: CMakeLists.txt  main.cpp
AmpelMFC/: AmpelMFC.vcxproj  AmpelMFC.vcxproj.filters  Frame.cpp  Frame.h  Resource.rc  Window.cpp  Window.h  main.cpp  resource.h
ConsoleC++/: ConsoleC++.vcxproj
ConsoleC++/vpproject/: ConsoleC++.vpp
CrashCourseC++/: CrashCourseC++.vcxproj  CrashCourseC++.vcxproj.filters  Functions.h  Structures.h  Test.cpp  enumerators.h  main.cpp
Tests/: Tests.vcxproj  main.cpp
docs/: Doku.md
